# Transpilador-Compiladores

./: CMakeLists.txt  README.md  REGEX+LLM.ipynb
LLM/: CodeLLama.ipynb  CodeLLamaFinetuning.ipynb  test.jsonl  train.jsonl
TranspiladorRegex/: NullTranspiler.hpp  PrintfToCoutTranspiler.hpp
Transpiler/: ArrayTranspiler.hpp  CMakeLists.txt  DefineTranspiler.hpp  NullTranspiler.hpp  PrintfToCoutTranspiler.hpp  StringTranspiler.hpp  Transpiler.cpp
